adding new featuers

--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -6726,3 +6726,54 @@ ul.label-inbox li a:hover, ul.label-inbox li.active a, ul.label-inbox li a:focus
 .search-bar{
 	position:relative;
 }
+
+h1 {
+    font-family: 'Tajawal', sans-serif !important;
+}
+h2 {
+    font-family: 'Tajawal', sans-serif !important;
+}
+h3 {
+    font-family: 'Tajawal', sans-serif !important;
+}
+h4 {
+    font-family: 'Tajawal', sans-serif !important;
+}
+h5 {
+    font-family: 'Tajawal', sans-serif !important;
+}
+h6 {
+    font-family: 'Tajawal', sans-serif !important;
+}
+
+div {
+    font-family: 'Tajawal', sans-serif !important;
+}
+
+span {
+    font-family: 'Tajawal', sans-serif !important;
+}
+
+ul {
+    font-family: 'Tajawal', sans-serif !important;
+}
+
+li {
+    font-family: 'Tajawal', sans-serif !important;
+}
+
+a {
+    font-family: 'Tajawal', sans-serif !important;
+}
+
+button {
+    font-family: 'Tajawal', sans-serif !important;
+}
+
+p {
+    font-family: 'Tajawal', sans-serif !important;
+}
+
+section {
+    font-family: 'Tajawal', sans-serif !important;
+}
